--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
     "unified": "^11.0.0",
     "unist-util-position-from-estree": "^2.0.0",
     "unist-util-stringify-position": "^4.0.0",
-    "unist-util-visit": "^5.0.0",
-    "vfile": "^6.0.0"
+    "unist-util-visit": "^5.0.0"
   },
   "scripts": {
     "test": "npm run test-coverage",
